--- a/app/src/main/res/layout/fragment_all_videos.xml
+++ b/app/src/main/res/layout/fragment_all_videos.xml
@@ -14,6 +14,11 @@
         android:orientation="vertical"
         tools:context="com.farhazulmullick.feature.allvideos.ui.fragments.VideosFragment">
 
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/continue_cpv"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"/>
+
         <TextView
             android:id="@+id/tv_total_videos"
             android:layout_margin="8dp"
