--- a/app/src/main/res/layout/fragment_all_videos.xml
+++ b/app/src/main/res/layout/fragment_all_videos.xml
@@ -17,7 +17,7 @@
         <androidx.compose.ui.platform.ComposeView
             android:id="@+id/continue_cpv"
             android:layout_width="match_parent"
-            android:layout_height="150dp"/>
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/tv_total_videos"
